tests/error/divide_by_zero.gw
#! [contains] ZeroDivideException
[ #(0.0, 0/0) ];
